--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="./assets/pc-smartphonethankstoFreepik.png" type="image/x-icon">
+<link rel="shortcut icon" href="https://res.cloudinary.com/df5ikz1ro/image/upload/v1702635954/pc-smartphonethankstoFreepik_k3dxnr.png" type="image/x-icon">
     <link rel="stylesheet" href="style2.css" />
     <title>Grid</title>
   </head>
